--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 body {
   font-family: 'Inter', sans-serif;
   background-color: white; /* o el color que uses */
@@ -322,5 +323,25 @@ img, .bg-light, .card, .container {
     color: #DE2F31;
     transform: rotate(0deg);  /* El rombo girado simula una estrella de 4 puntas */
     opacity: 0.9;
+  }
+}
+
+/* ===== BOTONES PERSONALIZADOS (CUADRADOS Y ROJOS) ===== */
+.btn-custom {
+  background-color: #de2f31 !important;
+  color: white !important;
+  border: none !important;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+  transition: background-color 0.2s ease;
+
+ &:hover {
+  background-color: color.scale(#de2f31, $lightness: -10%) !important;
+}
+
+  .icon {
+    font-size: 1.25rem;
   }
 }
