--- a/src/app/extraPages/landing-page/landing-page.html
+++ b/src/app/extraPages/landing-page/landing-page.html
@@ -10,9 +10,9 @@
           Una educación que forma personas íntegras y conscientes del mundo que las rodea.
         </p>
         <a
-          href="#"
           class="btn btn-primary btn-lg rounded-pill px-5 py-3"
           style="background-color: #de2f31; color: white; border: none"
+          (click)="navegacion.irAAdmisiones()"
           >Admisiones</a
         >
       </div>
